@@ -51,80 +51,7 @@ convert_to_utf8(string & text, const string & charset)
     char buf[1024];
     string tmp;
 
-#ifdef USE_ICONV
-    iconv_t conv = (iconv_t)-1;
-    const char * p = charset.c_str();
-    if (strncasecmp(p, "iso", 3) == 0) {
-	p += 3;
-	if (*p == '-' || *p == '_' || *p == ' ') ++p;
-    }
-    if (strncmp(p, "8859", 4) == 0) {
-	p += 4;
-	if (*p == '-' || *p == '_' || *p == ' ') ++p;
-	if (strcmp(p, "1") == 0) {
-	    // Assume windows-1252 if iso-8859-1 is specified.  The only
-	    // differences are in the range 128-159 which are control characters in
-	    // iso-8859-1, and a lot of content is mislabelled.  We use our own
-	    // conversion code for this case, as GNU iconv fails if it sees one
-	    // of the unassigned code points in windows-1252, whereas it would
-	    // accept the same input as iso-8859-1, and it seems undesirable to be
-	    // rejecting input due to this behind-the-scenes character set
-	    // shenanigans.
-	    goto cp_1252;
-	}
-    }
-    if (conv == (iconv_t)-1) {
-	conv = iconv_open("UTF-8", charset.c_str());
-    }
-    if (conv == (iconv_t)-1) {
-	if (charset.size() < 4 || charset[3] == '-')
-	    return;
-
-	// Try correcting common misspellings of UTF-16 and UCS-2 charsets.
-	// In particular, handle ' ' or '_' instead of '-', and a missing '-',
-	// so: UCS2 -> UCS-2, UTF_16 -> UTF-16, etc.
-	//
-	// Note: libiconv on OSX doesn't support these misspellings, though
-	// libiconv on Ubuntu does.
-	if (strncasecmp(charset.c_str(), "ucs", 3) != 0 &&
-	    strncasecmp(charset.c_str(), "utf", 3) != 0) {
-	    return;
-	}
-
-	string adjusted_charset(charset, 0, 3);
-	adjusted_charset += '-';
-	if (charset[3] == ' ' || charset[3] == '_') {
-	    adjusted_charset.append(charset, 4, string::npos);
-	} else {
-	    adjusted_charset.append(charset, 3, string::npos);
-	}
-
-	conv = iconv_open("UTF-8", adjusted_charset.c_str());
-	if (conv == (iconv_t)-1) return;
-    }
-
-    {
-	ICONV_INPUT_TYPE in = const_cast<char *>(text.c_str());
-	size_t in_len = text.size();
-	while (in_len) {
-	    char * out = buf;
-	    size_t out_len = sizeof(buf);
-	    if (iconv(conv, &in, &in_len, &out, &out_len) == size_t(-1) &&
-		errno != E2BIG) {
-		// FIXME: how to handle this?
-		break;
-	    }
-	    tmp.append(buf, out - buf);
-	}
-
-	(void)iconv_close(conv);
-
-	swap(text, tmp);
-	return;
-    }
-    {
-#else
-    /* If we don't have iconv, handle iso-8859-1, utf-16/ucs-2,
+    /* Handle iso-8859-1/windows-1252/cp-1252, utf-16/ucs-2,
      * utf-16be/ucs-2be, and utf-16le/ucs-2le. */
     const char * p = charset.c_str();
 
@@ -132,13 +59,13 @@ convert_to_utf8(string & text, const string & charset)
     if (strncasecmp(p, "utf", 3) == 0) {
 	p += 3;
 	if (*p == '-' || *p == '_' || *p == ' ') ++p;
-	if (*p != '1' || p[1] != '6') return;
+	if (*p != '1' || p[1] != '6') goto try_iconv;
 	p += 2;
 	utf16 = true;
     } else if (strncasecmp(p, "ucs", 3) == 0) {
 	p += 3;
 	if (*p == '-' || *p == '_' || *p == ' ') ++p;
-	if (*p != '2') return;
+	if (*p != '2') goto try_iconv;
 	++p;
 	utf16 = true;
     }
@@ -149,6 +76,7 @@ convert_to_utf8(string & text, const string & charset)
 	bool big_endian = true;
 	string::const_iterator i = text.begin();
 	if (*p == '\0') {
+	    // GNU iconv doesn't seem to handle BOMs.
 	    if (startswith(text, "\xfe\xff")) {
 		i += 2;
 	    } else if (startswith(text, "\xff\xfe")) {
@@ -162,7 +90,7 @@ convert_to_utf8(string & text, const string & charset)
 	} else if (strcasecmp(p, "LE") == 0) {
 	    big_endian = false;
 	} else if (!(strcasecmp(p, "BE") == 0)) {
-	    return;
+	    goto try_iconv;
 	}
 
 	tmp.reserve(text.size() / 2);
@@ -207,6 +135,14 @@ convert_to_utf8(string & text, const string & charset)
 	}
 	if (start) tmp.append(buf, start);
     } else {
+	// Assume windows-1252 if iso-8859-1 is specified.  The only
+	// differences are in the range 128-159 which are control characters in
+	// iso-8859-1, and a lot of content is mislabelled.  We use our own
+	// conversion code for this case, as GNU iconv fails if it sees one of
+	// the unassigned code points in windows-1252, whereas it would accept
+	// the same input as iso-8859-1, and it seems undesirable to be
+	// rejecting input due to this behind-the-scenes character set
+	// shenanigans.
 	const char * q = NULL;
 	if (strncasecmp(p, "windows", 7) == 0) {
 	    q = p + 7;
@@ -215,19 +151,18 @@ convert_to_utf8(string & text, const string & charset)
 	}
 	if (q) {
 	    if (*q == '-' || *q == '_' || *q == ' ') ++q;
-	    if (strcmp(q, "1252") == 0)
-		goto cp_1252;
-	}
-	if (strncasecmp(p, "iso", 3) == 0) {
-	    p += 3;
+	    if (strcmp(q, "1252") != 0)
+		goto try_iconv;
+	} else {
+	    if (strncasecmp(p, "iso", 3) == 0) {
+		p += 3;
+		if (*p == '-' || *p == '_' || *p == ' ') ++p;
+	    }
+	    if (strncmp(p, "8859", 4) != 0) goto try_iconv;
+	    p += 4;
 	    if (*p == '-' || *p == '_' || *p == ' ') ++p;
+	    if (strcmp(p, "1") != 0) goto try_iconv;
 	}
-	if (strncmp(p, "8859", 4) != 0) return;
-	p += 4;
-	if (*p == '-' || *p == '_' || *p == ' ') ++p;
-	if (strcmp(p, "1") != 0) return;
-#endif
-cp_1252:
 
 	// FIXME: pull this out as a standard "normalise utf-8" function?
 	tmp.reserve(text.size());
@@ -250,6 +185,31 @@ cp_1252:
 	    }
 	}
 	if (start) tmp.append(buf, start);
+    }
+
+    if (false) {
+try_iconv:
+#ifdef USE_ICONV
+	iconv_t conv = iconv_open("UTF-8", charset.c_str());
+	if (conv == (iconv_t)-1)
+	    return;
+	ICONV_INPUT_TYPE in = const_cast<char *>(text.c_str());
+	size_t in_len = text.size();
+	while (in_len) {
+	    char * out = buf;
+	    size_t out_len = sizeof(buf);
+	    if (iconv(conv, &in, &in_len, &out, &out_len) == size_t(-1) &&
+		errno != E2BIG) {
+		// FIXME: how to handle this?
+		break;
+	    }
+	    tmp.append(buf, out - buf);
+	}
+
+	(void)iconv_close(conv);
+#else
+	return;
+#endif
     }
 
     swap(text, tmp);
